[styles] Fix display of pinned cells overlapping with nodes below when scrolling horizontally - add background & border to pinned header cells

--- a/src/index.css
+++ b/src/index.css
@@ -525,6 +525,9 @@
     position: -webkit-sticky;
     position: sticky;
     z-index: 2;
+
+    background: inherit;
+    border-bottom: var(--rgt-border);
 }
 
 .rgt-cell-header-pinned-left {
